# outerspace

./: makefile  pyproject.toml
docs/: collapse_steps.md  commands.md  snakemake.md  stats.md  usage.md
docs/tutorials/crispr-screen/: README.md  grnaquery.toml  run_tutorial.sh
docs/tutorials/crispr-screen/results/: merged_counts_long.csv  merged_counts_wide.csv  merged_filtered_counts.csv  statistics.csv
docs/tutorials/crispr-screen/results/collapsed/: M1-lib.csv  M2-lib.csv  shuffle.csv
docs/tutorials/crispr-screen/results/count/: M1-lib.csv  M2-lib.csv  shuffle.csv
docs/tutorials/crispr-screen/results/count_filtered/: M1-lib.csv  M2-lib.csv  shuffle.csv
outerspace/: nearest.py  umi.py
outerspace/cli/: main.py
outerspace/cli/commands/: __init__.py  collapse.py  count.py  merge.py  pipeline.py  stats.py  subsample.py
outerspace/stats/: __init__.py  base.py  single.py
tests/: test_nearest.py
tests/configs/: grnaquery.toml  grnaquery_steps.toml
tests/test_cli/: test_functional_iterative.py  test_functional_pipeline.py
tests/test_cli/test_commands/: test_collapse.py  test_count.py  test_merge.py  test_pipeline.py  test_stats.py  test_subsample.py
tests/test_stats/: test_single.py  test_stepwise.py  test_stepwise_stats.toml
tests/test_stats/test_single/: test_gini.py  test_hill.py  test_shannon.py  test_simpson.py
workflow/: Snakefile
workflow/wrappers/collapse/: wrapper.py
workflow/wrappers/findseq/: wrapper.py
workflow/wrappers/stats/: README.md  wrapper.py
workflow/wrappers/subsample/: wrapper.py
