[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outerspace"
version = "0.0a1"
description = "A code to extract sequences from fastq files when the surrounding sequence is known"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "SB, DVK, REB, WD", email = "wnd22@drexel.edu"}
]
dependencies = [
    "tomlkit",
    "tqdm",
    "pyfastx",
    "regex",
    "umi_tools",
    "pyyaml",
    "snakemake",
    "pulp>=2.3.1,<3.3",
    "numpy>=2",
    "pandas>=2"
]

[project.scripts]
outerspace = "outerspace.cli:main"

[tool.setuptools]
packages = [
    "outerspace",
    "outerspace.cli",
    "outerspace.cli.commands",
    "outerspace.cli.utils",
    "outerspace.stats"
] 

[tool.setuptools.data-files]
"outerspace/workflow" = [
    "workflow/Snakefile"
]
"outerspace/workflow/wrappers/findseq" = [
    "workflow/wrappers/findseq/wrapper.py",
    "workflow/wrappers/findseq/environment.yaml",
    "workflow/wrappers/findseq/README.md"
]
"outerspace/workflow/wrappers/collapse" = [
    "workflow/wrappers/collapse/wrapper.py",
    "workflow/wrappers/collapse/environment.yaml",
    "workflow/wrappers/collapse/README.md"
]
"outerspace/workflow/wrappers/count" = [
    "workflow/wrappers/count/wrapper.py",
    "workflow/wrappers/count/environment.yaml",
    "workflow/wrappers/count/README.md"
]
"outerspace/workflow/wrappers/merge" = [
    "workflow/wrappers/merge/wrapper.py",
    "workflow/wrappers/merge/environment.yaml",
    "workflow/wrappers/merge/README.md"
]
"outerspace/workflow/wrappers/stats" = [
    "workflow/wrappers/stats/wrapper.py",
    "workflow/wrappers/stats/environment.yaml",
    "workflow/wrappers/stats/README.md"
]